<resources>
    <string name="app_name">Swipe Up</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="pants">PANTALONI</string>
    <string name="new_str">NOVITÀ</string>
    <string name="tshirts">T-SHIRTS</string>
    <string name="jackets">GIACCHE</string>
    <string name="top_hits">TOP SWIPE</string>
    <string name="man">UOMO</string>
    <string name="woman">DONNA</string>
    <string name="taglie"><u>Guida alle taglie</u></string>
    <string name="taglia_spinner"><u>TAGLIA</u></string>
    <string name="buy_text"><u>AGGIUNGI AL CARRELLO</u></string>

    <!-- scritte da sted -->
    <string name="downArrow">downArrow</string>
    <string name="brand">Massimo Dutti</string>
    <string name="priceTag">Prezzo</string>
    <string name="price">32£</string>
    <string name="accedi">ACCEDI</string>
    <string name="registrati">REGISTRATI</string>
    <string name="utilizza">UTILIZZA IL TUO ACCOUNT SOCIAL</string>
    <string name="inserisci">OPPURE INSERISCI LA TUA MAIL</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Nome</string>
    <string name="surname">Cognome</string>
    <string name="birthday">Data di nascita</string>
    <string name="completa">INSERISCI I TUOI DATI PER COMPLETARE LA REGISTRAZIONE</string>
    <string name="swipe_up">SWIPE UP</string>
    <string name="swipe_up_text">Swipe Up</string>
    <!-- fine scritte da sted-->

    <string-array name="color_spinner_array">
        <item>Rosa</item>
        <item>Blu</item>
        <item>Fosforescente</item>
    </string-array>

    <string-array name="taglia_spinner_array">
        <item>S</item>
        <item>M</item>
        <item>L</item>
        <item>XL</item>
    </string-array>
</resources>
