<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="com.SwipeUp.mainMenuManagement.MainMenuActivity">

    <ImageButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:background="@null"
        android:onClick="loginPressed"
        android:scaleType="centerInside"
        android:src="@drawable/log_in" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/woman_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="-4dp"
            android:layout_weight="1"
            android:background="@drawable/menu_button_unselected"
            android:onClick="womanButtonPressed">
            <TextView
                android:id="@+id/woman_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/woman"
                android:textColor="@color/light_grey"
                android:textSize="16sp"/>
        </RelativeLayout>

        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="15dp"
            android:background="@color/light_grey"/>

        <RelativeLayout
            android:id="@+id/man_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="-4dp"
            android:layout_weight="1"
            android:background="@drawable/menu_button_unselected"
            android:onClick="manButtonPressed">
            <TextView
                android:id="@+id/man_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/man"
                android:textColor="@color/light_grey"
                android:textSize="16sp"/>
        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="0dp"
        android:id="@+id/shuffles">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/top_hits_shuffle_button"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:onClick="topHitsPressed"
                android:scaleType="centerInside"
                android:src="@drawable/top_hits_shuffle" />

            <!--top hits shuffle-->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/top_hits_grad"
                android:onClick="newShufflePressed">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="16sp"
                    android:text="@string/top_hits"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/top_hits_shuffle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <!--new shuffle-->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="93dp"
                android:background="@color/shuffle_background_color"
                android:onClick="newShufflePressed"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="16sp"
                    android:text="@string/new_str"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/new_shuffle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <!--shirt shuffle-->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="203dp"
                android:background="@color/shuffle_background_color"
                android:onClick="tshirtShufflePressed"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="16sp"
                    android:text="@string/thirts"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/tshirt_shuffle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <!--pants shuffle-->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="313dp"
                android:background="@color/shuffle_background_color"
                android:onClick="pantsShufflePressed"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="16sp"
                    android:text="@string/pants"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/pants_shuffle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <!--jackets shuffle-->
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="423dp"
                android:background="@color/shuffle_background_color"
                android:onClick="jacketShufflePressed"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:textSize="16sp"
                    android:text="@string/jackets"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitEnd"
                    android:src="@drawable/jackets_shuffle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </RelativeLayout>

    </ScrollView>

</LinearLayout>